--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.9",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^7.9.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
